--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
   <!-- HERO VIDEO -->
   <section class="stack hero">
     <div class="media-wrapper">
-      <video autoplay muted loop playsinline>
-        <source src="assets/banner1.mp4" type="video/mp4">
-      </video>
+     <video autoplay muted loop playsinline>
+     <source src="assets/banner1mobile.mp4" media="(max-width: 768px)">
+     <source src="assets/banner1.mp4" type="video/mp4">
+     </video>
     </div>
   </section>
 
