--- a/index.html
+++ b/index.html
@@ -7,6 +7,78 @@
 
   <link rel="stylesheet" href="index.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!-- ================= PRELOAD HERO VIDEO ================= -->
+
+<!-- Desktop hero video -->
+<link
+  rel="preload"
+  as="video"
+  href="assets/banner1.mp4"
+  type="video/mp4"
+  media="(min-width: 769px)"
+>
+
+<!-- Mobile hero video -->
+<link
+  rel="preload"
+  as="video"
+  href="assets/banner1mobile.mp4"
+  type="video/mp4"
+  media="(max-width: 768px)"
+>
+
+<!-- ================= PRELOAD BANNER 2 (MOST IMPORTANT) ================= -->
+
+<!-- Desktop -->
+<link
+  rel="preload"
+  as="image"
+  href="assets/banner2.JPG"
+  media="(min-width: 769px)"
+  fetchpriority="high"
+>
+
+<!-- Mobile -->
+<link
+  rel="preload"
+  as="image"
+  href="assets/banner2mobile.PNG"
+  media="(max-width: 768px)"
+  fetchpriority="high"
+>
+
+<!-- ================= PRELOAD BANNER 3 ================= -->
+
+<link
+  rel="preload"
+  as="image"
+  href="assets/banner3.jpg"
+  media="(min-width: 769px)"
+>
+
+<link
+  rel="preload"
+  as="image"
+  href="assets/banner3mobile.jpg"
+  media="(max-width: 768px)"
+>
+
+<!-- ================= PRELOAD BANNER 4 ================= -->
+
+<link
+  rel="preload"
+  as="image"
+  href="assets/banner4.jpg"
+  media="(min-width: 769px)"
+>
+
+<link
+  rel="preload"
+  as="image"
+  href="assets/banner4mobile.jpg"
+  media="(max-width: 768px)"
+>
+
 </head>
 
 <body>
