--- a/header.html
+++ b/header.html
@@ -1,154 +1,149 @@
 <!-- ================= HEADER ================= -->
 <header class="site-header">
   <div class="header-inner">
-    <div class="left">
+
+    <!-- MENU (LEFT ON SCROLL) -->
+    <div class="menu-wrap">
       <span class="material-icons icon">menu</span>
     </div>
 
-    <div class="center">
-      <img src="assets/logo.png" alt="Mark Daniel Saddlery" class="logo">
+    <!-- LOGO (CENTER ON SCROLL) -->
+    <div class="logo-wrap">
+      <img src="assets/logo.png" alt="Mark Daniel Saddlery" class="brand-logo">
     </div>
 
-    <div class="right">
-      <span class="material-icons icon">search</span>
-      <span class="material-icons icon">person</span>
+    <!-- BRAND TEXT (CENTER INITIALLY) -->
+    <div class="brand-center">
+      <span class="brand-line-top">MARK DANIEL SADDLERY</span>
+    </div>
+
+    <!-- CART (RIGHT ON SCROLL) -->
+    <div class="cart-wrap">
       <span class="material-icons icon">shopping_cart</span>
     </div>
+
   </div>
 </header>
 
-<!-- ================= HEADER STYLES ================= -->
 <style>
-/* RESET ONLY FOR HEADER */
+/* ================= RESET ================= */
 .site-header, .site-header * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-/* HEADER WRAPPER */
+/* ================= HEADER BASE ================= */
 .site-header {
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
-  background: #fff;
-
-  /* 👇 shadow ALWAYS present */
-  box-shadow: 0 1px 8px rgba(0,0,0,0.08);
-
-  transition: background 0.35s ease, box-shadow 0.35s ease;
+  background: #111111;    /* darker black */
+  backdrop-filter: blur(10px);
+  transition: background 0.4s ease;
 }
 
-/* STRONGER SHADOW ON SCROLL (OPTIONAL) */
+
+/* SCROLLED → TRANSPARENT DARK GREY */
 .site-header.scrolled {
-  box-shadow: 0 4px 14px rgba(0,0,0,0.12);
+  background: rgba(0,0,0,0.35);   /* lighter grey */
+  backdrop-filter: blur(6px);
 }
 
 
-/* HEADER GRID */
+/* ================= LAYOUT ================= */
 .header-inner {
-  display: grid;
-  grid-template-columns: 48px 1fr 48px;
-  align-items: center;
-  height: 70px;
-  padding: 0 25px;
+  position: relative;
+  height: 92px;
+  padding: 0 32px;
 }
 
-/* SECTIONS */
-.left {
-  justify-self: start;
+/* ================= LOGO ================= */
+.logo-wrap {
+  position: absolute;
+  left: 32px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: all 0.45s ease;
 }
 
-.center {
-  justify-self: center;
+.brand-logo {
+  height: 52px;
+  transition: all 0.45s ease;
 }
 
-.right {
-  justify-self: end;
-  display: flex;
-  align-items: center;
-  gap: 25px;
+/* ================= BRAND TEXT ================= */
+.brand-center {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  transition: opacity 0.35s ease, transform 0.35s ease;
 }
 
-/* LOGO */
-.logo {
-  height: 70px;
-  opacity: 0;
-  animation: logoDrop 0.8s ease forwards;
+.brand-line-top {
+  font-family: 'Franklin Gothic Medium', Arial, sans-serif;
+  font-size: 20px;
+  letter-spacing: 3px;
+  color: #fff;
 }
 
-/* ICONS */
+/* ================= MENU & CART ================= */
+.menu-wrap,
+.cart-wrap {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.menu-wrap {
+  right: 80px;
+  transition: all 0.45s ease;
+}
+
+.cart-wrap {
+  right: 32px;
+  transition: all 0.45s ease;
+}
+
 .icon {
-  font-size: 25px;
+  font-size: 26px;
+  color: #fff;
   cursor: pointer;
-  opacity: 0;
-  transform: translateY(-6px);
-  animation: iconFade 0.6s ease forwards;
+  transition: transform 0.2s ease, opacity 0.2s ease;
 }
-
-.left .icon { animation-delay: 0.1s; }
-.right .icon:nth-child(2) { animation-delay: 0.2s; }
-.right .icon:nth-child(3) { animation-delay: 0.3s; }
 
 .icon:hover {
-  transform: scale(1.15);
-  transition: transform 0.25s ease;
+  transform: scale(1.1);
+  opacity: 0.75;
 }
 
-/* SEARCH */
-.search {
-  display: flex;
-  flex-direction: column;
-  font-size: 12px;
-  letter-spacing: 3px;
+/* ================= SCROLLED STATE ================= */
+.site-header.scrolled .logo-wrap {
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.search .line {
-  width: 110px;
-  height: 1px;
-  background: #000;
-  margin-top: 4px;
+.site-header.scrolled .brand-logo {
+  height: 46px;
 }
 
-/* ANIMATIONS */
-@keyframes logoDrop {
-  from {
-    opacity: 0;
-    transform: translateY(-10px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
+.site-header.scrolled .brand-center {
+  opacity: 0;
+  transform: translate(-50%, -60%);
+  pointer-events: none;
 }
 
-@keyframes iconFade {
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
+/* MENU → LEFT */
+.site-header.scrolled .menu-wrap {
+  left: 32px;
+  right: auto;
 }
 
-/* MOBILE */
-@media (max-width: 768px) {
-
-  .logo {
-    height: 50px;
-  }
-
-  .header-inner{
-height: 50px;
-padding: 0 14px;  
-gap: 16px;
+/* CART → RIGHT */
+.site-header.scrolled .cart-wrap {
+  right: 32px;
 }
 
-.right {
-  gap: 15px;
-}
-
-  .icon {
-    font-size: 25px;
-  }
-}
 </style>
