--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Forgot Password | Mark Daniel Saddlery</title>
+
+  <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/forgotpassword.css" />
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/preloader.css" />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
 </head>
 
 <body>
 
   <div id="preloader">
-  <img src="assets/blacklogo.png" alt="Mark Daniel Saddlery" class="preloader-logo">
+    <img src="assets/blacklogo.png" alt="Mark Daniel Saddlery" class="preloader-logo">
   </div>
+
   <div id="header-placeholder"></div>
+
   <main class="forgot-wrapper">
     <section class="forgot-card">
       <h1>Forgot Password</h1>
       <p class="subtitle">
         Enter your registered email address. We’ll send you an OTP to reset your password.
       </p>
+
       <form id="forgotForm">
         <div class="field">
           <label>Email</label>
-          <input id="email" type="email" placeholder="Enter your email">
+          <input id="email" type="email" placeholder="Enter your email" />
         </div>
         <button type="submit" class="send-btn">SEND OTP</button>
       </form>
+
       <div id="formMessage" class="form-message"></div>
+
       <p class="back-link">
         Remember your password?
         <a href="login.html">Back to Sign in</a>
@@ -41,73 +45,24 @@
     </section>
   </main>
 
-<script>
-  fetch('header.html')
-    .then(res => res.text())
-    .then(data => {
-      document.getElementById('header-placeholder').innerHTML = data;
-      const header = document.querySelector('.site-header');
-      window.addEventListener('scroll', () => {
-        header.classList.toggle('scrolled', window.scrollY > 40);
-      });
-      const script = document.createElement('script');
-      script.src = 'js/header.js';
-      document.body.appendChild(script);
-    });
-</script>
-
   <script>
-    const form = document.getElementById('forgotForm');
-    const emailInput = document.getElementById('email');
-    const messageBox = document.getElementById('formMessage');
-
-    const showMessage = (msg, type) => {
-      messageBox.textContent = msg;
-      messageBox.className = `form-message ${type}`;
-      messageBox.style.display = 'block';
-    };
-
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-
-      const email = emailInput.value.trim();
-
-      if (!email) {
-        showMessage('Please enter your email address.', 'error');
-        return;
-      }
-
-      try {
-        const res = await fetch('http://localhost:5000/api/users/forgot-password', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ email })
+    fetch('header.html')
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById('header-placeholder').innerHTML = data;
+        const header = document.querySelector('.site-header');
+        window.addEventListener('scroll', () => {
+          header.classList.toggle('scrolled', window.scrollY > 40);
         });
-
-        const data = await res.json();
-
-        if (!res.ok) {
-          showMessage(data.message || 'Failed to send OTP.', 'error');
-          return;
-        }
-
-        showMessage('OTP sent to your email. Please check your inbox.', 'success');
-
-        setTimeout(() => {
-          window.location.href =
-            `otp.html?email=${encodeURIComponent(email)}&type=reset`;
-        }, 1200);
-
-      } catch (err) {
-        console.error(err);
-        showMessage('Something went wrong. Please try again.', 'error');
-      }
-    });
+        const script = document.createElement('script');
+        script.src = 'js/header.js';
+        document.body.appendChild(script);
+      });
   </script>
 
-<script src="js/preloader.js"></script>
+  <script src="js/config.js"></script>
+  <script src="js/forgotpassword.js"></script>
+  <script src="js/preloader.js"></script>
 
 </body>
 </html>
-
-
