--- a/home.html
+++ b/home.html
@@ -20,15 +20,37 @@
   <img src="assets/blacklogo.png" alt="Mark Daniel Saddlery" class="preloader-logo">
     </div>
 
-<div id="header-placeholder"></div>
-  <section class="hero">
-    <h1 class="brand-name">MARK DANIEL</h1>
-  </section>
-  <section id="products-section">
-    <h2 class="section-title">NEW ARRIVALS</h2>
-    <div id="product-container" class="product-grid"></div>
-    <p class="cortex">© 2025 CORTEX²</p>
-  </section>
+    <div id="header-placeholder"></div>
+
+<!-- ================= HERO / EDITORIAL ================= -->
+
+<section class="hero-editorial">
+
+  <div class="hero-outline">
+    EQUESTRIAN
+  </div>
+
+  <div class="hero-copy">
+    <span class="hero-eyebrow">EQUESTRIAN HOUSE</span>
+    <h2>Handcrafted for the Ride</h2>
+  </div>
+
+</section>
+
+
+<!-- ================= PROMO STRAP ================= -->
+<div class="promo-strap dark">
+  Begin your journey with a 10% discount on your purchase
+</div>
+
+
+<!-- ================= PRODUCTS ================= -->
+<section id="products-section">
+  <h2 class="section-title">New Arrivals</h2>
+  <div id="product-container" class="product-grid"></div>
+</section>
+
+<div id="footer-placeholder"></div>
 
    <script>
   fetch('header.html')
